# retireplan

./: .gitignore  CLAUDE.md  NewConfig_LifestylePercentages.yaml  PROJECT_AUDIT.md  PROJECT_AUDIT_2.md  Projections_Brokerage_Roth_IRA_120000.0_20250909_163549.csv  README.md  RULES.md  RetirePlan_Project_Scope.docx  RetirementPlanner.spec  SPENDING_MODEL.md  calculation_analysis.txt  pyproject.toml
docs/: BROKERAGE_MAGI_MODEL.md  Engine Cleanup.docx  GUI cleanup.docx  Output Column Definitions.docx  PROJECT_CONTRACT.md  PROJECT_DEPENDENCY_AUDIT.md  Python Custom Retirement Planner.docx  ~$gine Cleanup.docx
examples/: sample_events.yaml  sample_inputs.yaml
output/: alt_brokerage_first.csv  alt_brokerage_first__summary.csv  baseline_ira_first.csv  baseline_ira_first__summary.csv  combined_summary.csv  large_event.csv  large_event__summary.csv  post_medicare.csv  post_medicare__summary.csv  pre_medicare_magi_fill.csv  pre_medicare_magi_fill__summary.csv  projections_BrokeRothIRA.csv  projections_Brokerage_Roth_IRA_120000.0_20250906_230650.csv  projections_IRABrokeRoth.csv  rmd_forced.csv  rmd_forced__summary.csv
retireplan/: .pre-commit-config.yaml  accounts.py  audit.py  default_config.yaml  default_config_2.yaml  diagnostics.py  doctor.py  engine.py  gui.py  input_panel.py  inputs.py  io_csv.py  policy.py  precision.py  projections.py  scenarios.py  schema.py  social_security.py  spending.py  taxes.py  theme.py  timeline.py  utils.py
tests/: test_accounts_draw_order.py  test_calculation_consistency.py  test_csv_parity.py  test_diagnostics_report.py  test_draw_order.py  test_env.py  (+20 more)
(+31 files in other folders)
