[project]
name = "retireplan"
version = "0.1.0"
description = "Year-by-year retirement planner"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Your Name" }]

dependencies = [
    "pandas>=2.3,<3.0",
    "numpy>=2.0,<3.0",
    "ttkbootstrap>=1.10,<2.0",
    "matplotlib>=3.10,<4.0",
    "openpyxl>=3.1,<4.0",
    "pyyaml>=6.0,<7.0",
]

[project.scripts]
retireplan-doctor = "retireplan.doctor:main"
retireplan-audit = "retireplan.audit:main"

[tool.poetry]
packages = [{ include = "retireplan" }]
